more ramanujan sums

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -113,3 +113,18 @@
     volume = {35},
     pages = {761-766}
 }
+@article{Murty1,
+    author = "M. Ram Murty",
+    title = "Ramanujan series for arithmetical functions",
+    journal = "Hardy-Ramanujan Journal",
+    year = "2013",
+    volume = "36"
+}
+@article{Ram1,
+    author = "Srinivasa Ramanujan",
+    title = "On certain trigonometric sums and their applications in the theory of numbers",
+    journal = "Transactions of the Cambridge Phil. Society",
+    year = "1918",
+    volume = "22",
+    pages = "179-199"
+}
