--- a/bibliography.bib
+++ b/bibliography.bib
@@ -128,3 +128,11 @@
     volume = "22",
     pages = "179-199"
 }
+@book{Prand1,
+    author = "Paolo Prandoni and Martin Vetterli",
+    editor = "",
+    title = "Signal processing for comunnications",
+    publisher = "EPFL Press",
+    year = "2008",
+    edition = "1"
+}
