--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,8 @@
 % \input{lec_03.tex}
 % \input{lec_04.tex}
 \input{lec_05.tex}
-% \input{lec_06.tex}
+\input{lec_06.tex}
+% \input{lec_07.tex}
 
 \input{eof.tex}
 \end{document}
