--- a/preamble.tex
+++ b/preamble.tex
@@ -8,7 +8,7 @@
 \usepackage[utf8]{inputenc} %character codification
 
 %Layout
-\usepackage[left=3.0cm,right=3.0cm,top=3.0cm,bottom=3.3cm,headheight=0.8cm,asymmetric]{geometry} %page size
+\usepackage[left=3.0cm,right=3.0cm,top=3.0cm,bottom=3.3cm,headheight=0.8cm,asymmetric,showframe]{geometry} %page size
 %use headheight to control the distance between header and text
 %use asymmetric to fix marginpar notes to one side
 \usepackage{fancyhdr} %footers and headers
