--- a/bibliography.bib
+++ b/bibliography.bib
@@ -136,3 +136,12 @@
     year = "2008",
     edition = "1"
 }
+@article{Sam1,
+    author={Samadi, S. and Ahmad, M.O. and Swamy, M.N.S.},
+    journal={IEEE Signal Processing Letters}, 
+    title={Ramanujan sums and discrete {F}ourier transforms}, 
+    year={2005},
+    volume={12},
+    number={4},
+    pages={293-296}
+}
